--- a/LabWork/lab.tex
+++ b/LabWork/lab.tex
@@ -1,5 +1,95 @@
 	\section{Цель работы}
-		
-	\section{Порядок выполенения работы}
+		Научиться формулировать постановку задачи на разработку компонента распределенной системы и фиксировать требования.
+	\section{Постановка задачи}
+	
+	Необходимо разработать модуль, реализующий логику переключения светодиодного светофора для автомобилей. При выполнении задания считать, что светофор один, установлен на однополосной дороге и закреплен на столбе так, чтобы быть видным водителям транспортных средств.
+	
+	
+	Логика должна обеспечивать следующий цикл переключений сигналов:	
+	\begin{itemize}
+		\item 40 секунд зеленый;
+		\item 4 секунды желтый;
+		\item 30 секунд красный.
+	\end{itemize}
+
+	Управляющая логика, которую следует разработать, должна взаимодействовать с исполнительным модулем, умеющим взаимодействовать с контроллером светофора и контролирующей логикой. Модуль-исполнитель умеет устанавливать на светофоре нужный сигнал — зеленый, красный, желтый. Он не умеет организовывать ожиданий. Т.е., нельзя сказать ему: <<показывай зеленый сигнал 40 секунд>>. Время должна контролировать управляющая логика. Контролирующая логика решает задачу включения цикла работы управляющей логики и получает от нее сообщения о проблемах.
+	
+	При выполнении задания следует считать, что аппаратура светофора обеспечивает:
+	\begin{itemize}
+		\item мигающий желтый сигнал при включении;
+		\item мигающий желтый сигнал в случае аварии контроллера (автоматически включается когда не поступают воздействия от контроллера).
+	\end{itemize}
+
+	Модуль-исполнитель пассивен по своей природе и обеспечивает реакцию на команды, никогда не начиная обмены по своей инициативе. Управляющая логика должна в нужные моменты передавать через коммуникационную среду сообщения-команды исполнительному модулю и ожидать от него ответа об исполнении. Для установки сигнала нужного света нужно отправить исполнительному модулю сообщение \textit{SetLight}. Ниже приведен протокол модуля-исполнителя:
+	
+	\begin{lstlisting}
+Enumerations ; Перечислимые типы
+ColorType                | Цвет светофора
+1 : 3
+Red    : 1           |- Красный цвет 
+Yellow : 2           |- Желтый цвет
+Green  : 3           |- Зеленый цвет
+Messages ; Сообщение
+SetLight : 1             | Установить новый сигнал
+1 : 1
+Color : ColorType    |- Требуемый цвет сигнала
+Success : 2              | Команда контроллеру отработана
+1 : 0
+Fail : 3                 | Ошибка в работе контроллера (авария)
+1 : 0 
+	\end{lstlisting}
+	
+	После отправки исполнителю команды (сообщения \textit{SetLight}) следует учесть три возможных варианта дальнейшего развития событий:
+	\begin{enumerate}
+		\item 	исполнитель успешно отрабатывает запрос и светофор показывает нужный сигнал — ситуация, в которой получено ответное сообщение \textit{Success};
+		\item исполнитель обнаружил, что не может обработать запрос и сообщает об аварии контроллера — ситуация, в которой получено ответное сообщение \textit{Fail};
+		\item управляющая логика отправила запрос, но ничего не получила в ответ — ситуация, которую можно «поймать» с помощью тайм-аута нахождения в состоянии ожидания ответа от модуля-исполнителя.
+	\end{enumerate}
+	
+	Варианты 2 и 3 при выполнении задания считать аварийными. Обрабатывая эту ситуацию, следует остановить работу управляющей логики на паузу, отправив вышестоящему уровню (контролирующей логике) оповещение \textit{ProblemDetected}. В состоянии паузы управляющая логика должна уметь воспринимать команды «выгрузиться» (сообщение \textit{Shutdown}) и «возобновить работу» (сообщение Start). Изначально управляющая логика должна находиться в состоянии паузы.
+	\begin{lstlisting}
+Enumerations ; Перечислимые типы
+Messages ; Сообщения
+Start : 1           | Включить цикл работы светофора
+1 : 0
+Shutdown : 2        | Выгрузить управляющую логику
+1 : 0
+ProblemDetected : 3 | Проблема в работе светофора
+1 : 0
+	\end{lstlisting}
+	
+При реализации следует также использовать системные сообщения среды исполнения, определенные протоколом обмена \textit{Kernel}.
+
+	\begin{lstlisting}
+Messages ; Сообщения
+TimeOut : 1                                 | Сообщение TimeOut. Рассылается машинами состояний в случае превышения допустимого интервала нахождения в определенном состоянии.
+1 : 0
+ModuleFailedOnEvent : 2                     | Модуль не смог обработать сообщение
+1 : 3
+EventKind : int                         | - Тип, события, при реакции на которое произошла ошибка
+ExceptionKind : string                  | - Тип ошибки (исключения)
+ExceptionMessage : string               | - Сообщение об ошибке
+Start : 3                                   | Команда инициализации
+1 : 0
+Stop : 4                                    | Команда остановки
+1 : 0 ; Поколение 1, число аргументов 0
+StateChanged : 5                            | Событие, присылаемое в момент изменения состояния конечного автомата
+1 : 4
+MachineName : string                    | - Имя конечного автомата, перешедшего в новое состояние
+OldState : string                       | - Старое состояние машины
+NewState : string                       | - Новое состояние машины
+Event : int                             | - Событие, активировавшее переход
+	\end{lstlisting}
+	
+	\section{Требования к решению}
+	Для успешного прохождения тестирования кандидат должен предоставить комплект материалов:
+	
+	\begin{itemize}
+		\item Сценарии работы модуля управляющей логики
+		\item Чек-лист
+		\item Модель конечного автомата
+		\item Код
+	\end{itemize}
 	
 	\section{Вывод}
+		Поставлена задача на разработку компонента распределенной системы и зафиксированы требования.
