Added some data

--- a/LabWork/lab.tex
+++ b/LabWork/lab.tex
@@ -1,5 +1,5 @@
 	\section{Цель работы}
-		
+		Научиться описывать сценарии работы компонента распределенной системы.
 	\section{Порядок выполенения работы}
 	
 	\section{Вывод}
