--- a/common/data.tex
+++ b/common/data.tex
@@ -13,7 +13,7 @@
 \newcommand{\kafedra}                % Кафедра
 {Кафедра Прикладной Математики}
 \newcommand{\thesisTitle}              % Диссертация, название
-{\texorpdfstring{Постановка задачи на разработку компонента распределенной системы}{Постановка задачи на разработку компонента распределенной системы}}
+{\texorpdfstring{Разработка сценариев работы компонента распределенной системы}{Разработка сценариев работы компонента распределенной системы}}
 \newcommand{\courseName}
 {Распределённые системы и параллельные вычисления}
 \newcommand{\labNumber}
