--- a/LabWork/lab.tex
+++ b/LabWork/lab.tex
@@ -1,5 +1,87 @@
 	\section{Цель работы}
 		Научиться описывать сценарии работы компонента распределенной системы.
 	\section{Порядок выполенения работы}
+
 	
+		\subsection{Главные цели}
+			Перед началом работы, модуль $ CrosswalkController $ должен быть проинициализирован.
+			После инициализации он меняет состояния сфетофора в цикле.
+			\begin{enumerate}
+				\item S1. Инициализация
+				\item S2. Состояние паузы
+				\item S3. Цикл переключения светофора
+				\item S4. Реакция на поломку
+			\end{enumerate}
+			\subsubsection{Проверки}
+			\begin{enumerate}
+				\item Инициализация, 1 цикл переключения состояний перехода, выключение по команде $ Kernel.Stop $
+				\item Инициализация, выключение по команде $ Kernel.Stop $
+				\item Инициализация, запуск цикла, прерывание цикла неполадкой контроллера светофора, выгрузка
+				\item Инициализация, запуск цикла, прерывание цикла отсутствием ответа контроллера светофора, перезапуск, выключение по команде $ Kernel.Stop $
+			\end{enumerate}
+		\subsection{Описание сценариев}
+		\subsubsection{S1. Инициализация}
+			Модуль $ CrosswalkController $ включается сообщением $ Kernel.Start $. 
+			При его получении модуль находит светофор и переходит в состояние паузы.
+			\paragraph{Проверки}
+			\begin{enumerate}
+				\item После включения модуль выгружается при получении сообщения о выгрузке $ Kernel.Stop $.
+				\item После включения модуль переходит в состояние паузы
+			\end{enumerate}
+		\subsubsection{S2. Состояне паузы}
+			В состоянии паузы управляющая логика должна уметь воспринимать команды выгрузиться (сообщение $ Shutdown $) и возобновить работу (сообщение $ Start $)
+			\paragraph{Проверки}
+				\begin{enumerate}
+					\item Выгрузка по команде  $ Kernel.Stop $
+					\item Выгрузка по команде $ Shutdown $
+					\item Цикл переключения светофора по команде $ Start $
+				\end{enumerate}
+		\subsubsection{S3. Цикл переключения светофора}
+		Состояние перехода изменяется переключением цвета светофоров для пешеходов и для водителей. Переключения осуществляются по определённому циклу с определёнными задержками:
+			\begin{enumerate}
+				\item 40 секунд горит зелёный свет
+				\item 4 секунд горит жёлтый свет
+				\item 30 секунд горит красный
+				\item после этого цикл повторяется.
+			\end{enumerate}
+		\paragraph{Подцели}
+			\begin{enumerate}
+				\item S3.1. Включить зелёный свет на светофоре
+				\item S3.2. Проверить ответ
+				\item S3.3. Подождать 40 секунд
+				\item S3.4. Включить жёлтый свет на светофоре
+				\item S3.5. Проверить ответ (= S3.2)
+				\item S3.6. Подождать 4 секунды
+				\item S3.7. Включить красный свет на светофоре
+				\item S3.8. Проверить ответ (= S3.2)
+				\item S3.9. Подождать 30 секунд
+				\item S3.10. Повторение S3
+			\end{enumerate}
+		\paragraph{Проверки}
+			\begin{enumerate}
+				\item После включения и сообщения $ Start $ через 2 секунды цвет светофора должен быть зелёным
+				\item  через 42  секунд после включения и сообщения $ Start $ цвет светофора должен быть жёлтым
+				\item  через 46 секунд после включения и сообщения $ Start $ цвет светофора должен быть красным
+			\end{enumerate}
+		\subsubsection{S3.2. Проверка ответа}
+			В случае $ Success $, цикл переключения продолжается. В случае $ Fail $ или $ TimeOut $ выполняется отправить сообщение $ ProblemDetected $ и перейти в состояние паузы.
+				\paragraph{Проверки}
+				\begin{enumerate}
+					\item Получен $ Success $, цикл продолжается.
+					\item Получен  $ Fail $, вызов S4
+					\item Получен  $ TimeOut $, вызов S4
+				\end{enumerate}
+			
+		\subsubsection{S4. Реакция на поломку}
+			Отправляет $ ProblemDetected $ контролирующей логике, переходит в состояние паузы.
+			\paragraph{Подцели}
+				\begin{enumerate}
+					\item S3.1. Отправление $ ProblemDetected $
+					\item S3.2. переход в состояние паузы
+				\end{enumerate}
+			\paragraph{Подцели}
+				\begin{enumerate}
+					\item Отправление $ ProblemDetected $ и переход в состояние паузы
+				\end{enumerate}
 	\section{Вывод}
+			Описаны сценарии работы компонента распределенной системы.
