--- a/LabWork/lab.tex
+++ b/LabWork/lab.tex
@@ -1,5 +1,12 @@
-	\section{Цель работы}
+\section{Цель работы}
+	Научиться разрабатывать и описывать на мета-языке протоколы взаимодействия событийно-управляемых компонент распределенной системы.
 		
-	\section{Порядок выполенения работы}
+\section{Порядок выполенения работы}
+
+	\lstinputlisting[caption={Протокол контроллера светофора}]{listings/lights-protocol.txt}
+	\lstinputlisting[caption={Протокол управляющей логики}]{listings/manager-protocol.txt}
+	\lstinputlisting[caption={Протокол контролирующей логики}]{listings/control-logic-protocol.txt}
 	
-	\section{Вывод}
+
+\section{Вывод}
+	Разработаны и описаны на мета-языке протоколы взаимодействия событийно-управляемых компонент распределенной системы.
