--- a/common/data.tex
+++ b/common/data.tex
@@ -13,11 +13,11 @@
 \newcommand{\kafedra}                % Кафедра
 {Кафедра Прикладной Математики}
 \newcommand{\thesisTitle}              % Диссертация, название
-{\texorpdfstring{Постановка задачи на разработку компонента распределенной системы}{Постановка задачи на разработку компонента распределенной системы}}
+{\texorpdfstring{Разработка протокола взаимодействия, поддерживаемого компонентном распределенной системы}{Разработка протокола взаимодействия, поддерживаемого компонентном распределенной системы}}
 \newcommand{\courseName}
 {Распределённые системы и параллельные вычисления}
 \newcommand{\labNumber}
-{1}
+{3}
 \newcommand{\thesisCity}               % Диссертация, город защиты
 {Москва}
 \newcommand{\thesisYear}               % Диссертация, год защиты
