--- a/common/data.tex
+++ b/common/data.tex
@@ -13,9 +13,9 @@
 \newcommand{\kafedra}                % Кафедра
 {Кафедра Прикладной Математики}
 \newcommand{\thesisTitle}              % Диссертация, название
-{\texorpdfstring{Тема}{Тема}}
+{\texorpdfstring{Реализовать алгоритм сжатия методом Хаффмана на языке FPTL}{Реализовать алгоритм сжатия методом Хаффмана на языке FPTL}}
 \newcommand{\courseName}
-{Название Предмета}
+{Параллельное программирование}
 \newcommand{\labNumber}
 {1}
 \newcommand{\thesisCity}               % Диссертация, город защиты
@@ -26,9 +26,9 @@
 {Национальный исследовательский университет}
 
 \newcommand{\supervisorFio}            % Научный руководитель, ФИО
-{Фамилия Имя Отчество}
+{Кутепов Виталий Павлович}
 \newcommand{\supervisorFioShort}            % Научный руководитель, ФИО
-{И.О.~Фамилия}
+{В.П.~Кутепов}
 
 
 % To avoid conflict with beamer class use \providecommand
