--- a/CourseWork/course.tex
+++ b/CourseWork/course.tex
@@ -1,2 +1,15 @@
-\chapter{Пункт 1}
+\chapter{Описание}
+
+В процессе выполнения работы изучена архитектура Android приложений и их основные компоненты. Составлено описание компонент и приведены примеры их использования. Разработано приложения для онлайн-чата, в котором:
+\begin{enumerate}
+	\item Используются фрагменты,
+	\item Используется популярная ORM - dbFlow,
+	\item Бизнес-логика выполняется асинхронно с основным потоком,
+	\item Внедрена архитектура MVP с помощью фреймворка MOSBY,
+	\item Используется Google аутентификация,
+	\item Разработаны собственные визуальные компоненты,
+	\item Внедрена анимация всех видов, в том числе анимация переходов между фрагментами и активити, а также сплеш-скрин с векторной анимацией.
+\end{enumerate}
+
+ Исходный код приложения доступен по адресу \href{https://github.com/goto1134/Govorun/tree/dev}{https://github.com/goto1134/Govorun/tree/dev}
 	
