--- a/CourseWork.tex
+++ b/CourseWork.tex
@@ -27,10 +27,10 @@
 \begin{document}
 	\input{common/renames}                   % Переопределение именований
 	\include{CourseWork/title}           % Титульный лист
-	\include{CourseWork/contents}
-	\include{CourseWork/introduction} % Введение
+	%\include{CourseWork/contents}
+	%\include{CourseWork/introduction} % Введение
 	\include{CourseWork/course}  % Текст работы
-	\include{CourseWork/conclusion} % Заключение
-	\include{common/references} % Список литературы
-	\include{CourseWork/appendix} % Приложения
+	%\include{CourseWork/conclusion} % Заключение
+	%\include{common/references} % Список литературы
+	%\include{CourseWork/appendix} % Приложения
 \end{document}
