First version of distributed systems 4

--- a/common/data.tex
+++ b/common/data.tex
@@ -13,11 +13,11 @@
 \newcommand{\kafedra}                % Кафедра
 {Кафедра Прикладной Математики}
 \newcommand{\thesisTitle}              % Диссертация, название
-{\texorpdfstring{Разработка протокола взаимодействия, поддерживаемого компонентном распределенной системы}{Разработка протокола взаимодействия, поддерживаемого компонентном распределенной системы}}
+{\texorpdfstring{Разработка чек-листов для компонента распределенной системы}{Разработка чек-листов для компонента распределенной системы}}
 \newcommand{\courseName}
 {Распределённые системы и параллельные вычисления}
 \newcommand{\labNumber}
-{3}
+{4}
 \newcommand{\thesisCity}               % Диссертация, город защиты
 {Москва}
 \newcommand{\thesisYear}               % Диссертация, год защиты
