--- a/LabWork/lab.tex
+++ b/LabWork/lab.tex
@@ -1,12 +1,10 @@
 \section{Цель работы}
-	Научиться разрабатывать и описывать на мета-языке протоколы взаимодействия событийно-управляемых компонент распределенной системы.
+	Научиться разрабатывать чек-листы, содержащие все необходимые для контроля аспекты работы компонента распределенной системы.
 		
 \section{Порядок выполенения работы}
 
-	\lstinputlisting[caption={Протокол контроллера светофора}]{listings/lights-protocol.txt}
-	\lstinputlisting[caption={Протокол управляющей логики}]{listings/manager-protocol.txt}
-	\lstinputlisting[caption={Протокол контролирующей логики}]{listings/control-logic-protocol.txt}
+	\lstinputlisting[caption={Чек-листы}]{listings/check-list.txt}
 	
 
 \section{Вывод}
-	Разработаны и описаны на мета-языке протоколы взаимодействия событийно-управляемых компонент распределенной системы.
+	Разработаны чек-листы, содержащие все необходимые для контроля аспекты работы компонента распределенной системы.
