--- a/common/data.tex
+++ b/common/data.tex
@@ -13,11 +13,11 @@
 \newcommand{\kafedra}                % Кафедра
 {Кафедра Прикладной Математики}
 \newcommand{\thesisTitle}              % Диссертация, название
-{\texorpdfstring{Разработка чек-листов для компонента распределенной системы}{Разработка чек-листов для компонента распределенной системы}}
+{\texorpdfstring{Описание поведения компонента распределённой системы с помощью детерминированных конечных автоматов}{Описание поведения компонента распределённой системы с помощью детерминированных конечных автоматов}}
 \newcommand{\courseName}
 {Распределённые системы и параллельные вычисления}
 \newcommand{\labNumber}
-{4}
+{5}
 \newcommand{\thesisCity}               % Диссертация, город защиты
 {Москва}
 \newcommand{\thesisYear}               % Диссертация, год защиты
