--- a/common/data.tex
+++ b/common/data.tex
@@ -13,11 +13,11 @@
 \newcommand{\kafedra}                % Кафедра
 {Кафедра Прикладной Математики}
 \newcommand{\thesisTitle}              % Диссертация, название
-{\texorpdfstring{Описание поведения компонента распределённой системы с помощью детерминированных конечных автоматов}{Описание поведения компонента распределённой системы с помощью детерминированных конечных автоматов}}
+{\texorpdfstring{Разработка обработчиков переходов в конечном автомате}{Разработка обработчиков переходов в конечном автомате}}
 \newcommand{\courseName}
 {Распределённые системы и параллельные вычисления}
 \newcommand{\labNumber}
-{5}
+{6}
 \newcommand{\thesisCity}               % Диссертация, город защиты
 {Москва}
 \newcommand{\thesisYear}               % Диссертация, год защиты
