--- a/common/data.tex
+++ b/common/data.tex
@@ -13,11 +13,11 @@
 \newcommand{\kafedra}                % Кафедра
 {Кафедра Прикладной Математики}
 \newcommand{\thesisTitle}              % Диссертация, название
-{\texorpdfstring{Разработка обработчиков переходов в конечном автомате}{Разработка обработчиков переходов в конечном автомате}}
+{\texorpdfstring{Тестирование компонента распределённой системы}{Тестирование компонента распределённой системы}}
 \newcommand{\courseName}
 {Распределённые системы и параллельные вычисления}
 \newcommand{\labNumber}
-{6}
+{8}
 \newcommand{\thesisCity}               % Диссертация, город защиты
 {Москва}
 \newcommand{\thesisYear}               % Диссертация, год защиты
