--- a/common/data.tex
+++ b/common/data.tex
@@ -13,11 +13,11 @@
 \newcommand{\kafedra}                % Кафедра
 {Кафедра Прикладной Математики}
 \newcommand{\thesisTitle}              % Диссертация, название
-{\texorpdfstring{MPI. Измерение латентности и пропускной способности каналов обмена данными.}{MPI. Измерение латентности и пропускной способности каналов обмена данными.}}
+{\texorpdfstring{MPI. Решение системы линейных уравнений методом Гаусса .}{MPI.	Решение системы линейных уравнений методом Гаусса .}}
 \newcommand{\courseName}
 {Параллельные языки программирования}
 \newcommand{\labNumber}
-{2}
+{3}
 \newcommand{\thesisCity}               % Диссертация, город защиты
 {Москва}
 \newcommand{\thesisYear}               % Диссертация, год защиты
