--- a/LabWork.tex
+++ b/LabWork.tex
@@ -17,6 +17,9 @@
 \input{Dissertation/userstyles}          % Стили для специфических пользовательских задач
 \input{biblio/bibliopreamble}% Настройки библиографии из внешнего файла (там же выбор: встроенная или на основе biblatex)
 
+\usepackage{pgfplots}
+\usepackage{csvsimple}
+
 \input{Dissertation/inclusioncontrol}    % Управление компиляцией отдельных частей диссертации
 \usepackage[section]{placeins}
 
