--- a/LabWork.tex
+++ b/LabWork.tex
@@ -20,6 +20,8 @@
 \input{Dissertation/inclusioncontrol}    % Управление компиляцией отдельных частей диссертации
 \usepackage[section]{placeins}
 
+\usepackage{csvsimple}
+
 \usepackage{hyperref} %ссылки на сторонние ресурсы
 
 \renewcommand\thesection{\arabic{section}} %номера секций не содержат номер главы
