--- a/common/data.tex
+++ b/common/data.tex
@@ -13,11 +13,11 @@
 \newcommand{\kafedra}                % Кафедра
 {Кафедра Прикладной Математики}
 \newcommand{\thesisTitle}              % Диссертация, название
-{\texorpdfstring{Реализовать алгоритм сжатия методом Хаффмана на языке FPTL}{Реализовать алгоритм сжатия методом Хаффмана на языке FPTL}}
+{\texorpdfstring{PVM. Генерация массива случайных чисел.}{PVM. Генерация массива случайных чисел.}}
 \newcommand{\courseName}
 {Параллельное программирование}
 \newcommand{\labNumber}
-{1}
+{5}
 \newcommand{\thesisCity}               % Диссертация, город защиты
 {Москва}
 \newcommand{\thesisYear}               % Диссертация, год защиты
